# gsoc-2025-fhir

./: .pre-commit-config.yaml  .secrets.baseline  README.md
Docker/: .env  Dockerfile  config.py  docker-compose.yaml  pyproject.toml  requirements.txt
Docker/fhir_proxy/: config.py  main.py
Helm/: Chart.yaml  values.yaml
Helm/templates/: configmap.yaml  deployment.yaml  service.yaml
Helm_hapifhir/: Chart.yaml  values.yaml
Helm_hapifhir/templates/: deployment.yaml  service.yaml
Unit Testing/: conftest.py  requirements.txt  test_proxy.py  test_proxy_old.py
fhir_proxy/: .env  pyproject.toml
fhir_proxy/app/: auth.py  config.py  main.py
