[tool.poetry]
name = "fhir-proxy"
version = "0.1.0"
description = "FHIR Proxy Service"
authors = ["sielliandriana@gmail.com"]
license = "MIT"
packages = [{ include = "fhir_proxy" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.2"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
httpx = "^0.24.1"
python-jose = "^3.3.0"
python-dotenv = "^1.0.0"
starlette = "^0.27.0"

gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
